--- a/excess-checker/index.html
+++ b/excess-checker/index.html
@@ -21,6 +21,7 @@
     .btn{background:linear-gradient(90deg,var(--brand),var(--brand2));color:#fff;border:0;border-radius:12px;padding:12px 18px;font-weight:700;cursor:pointer}
     .btn.ghost{background:#fff;border:1px solid var(--line);color:var(--ink)}
     .btn.danger{background:linear-gradient(90deg,#ef4444,#f43f5e)}
+    .btn.small{padding:6px 10px;font-size:12px}
     .btn:disabled{opacity:.55;cursor:not-allowed}
     .card{background:#fff;border:1px solid var(--line);border-radius:16px;box-shadow:0 8px 28px rgba(17,24,39,.06);padding:18px}
     .stat{background:var(--panel);border:1px solid var(--line);border-radius:14px;padding:14px;margin-bottom:14px}
@@ -150,7 +151,7 @@ TPS7A4700-RGWT"></textarea>
       </div>
     </section>
 
-    <!-- REMOVE -->
+    <!-- REMOVE (kept for now; safe to delete once you're happy with vendor-side delete) -->
     <section id="tab-remove" class="section">
       <div class="hint" style="border:1px dashed var(--line);border-radius:12px;padding:10px;margin-bottom:10px">
         Choose a prior upload (Vendor × Date) below, then click <b>Remove</b>.<br/>
@@ -191,12 +192,12 @@ TPS7A4700-RGWT"></textarea>
     <!-- VENDORS -->
     <section id="tab-vendors" class="section">
       <div class="hint" style="border:1px dashed var(--line);border-radius:12px;padding:10px;margin-bottom:10px">
-        Pick a vendor to see their parts and quantities.
+        Pick a vendor to see their parts and quantities. Use the Delete button to remove all parts for that vendor.
       </div>
       <div class="grid">
         <div>
           <label><strong>Search vendors</strong></label>
-          <input type="text" id="vendor-search" placeholder="Type to filter (min 2 chars)"/>
+          <input type="text" id="vendor-search" placeholder="Type to filter (leave empty to show all)"/>
           <div class="hint">Showing <span id="vendor-count">0</span> vendors</div>
           <div id="vendor-list" class="rows" style="max-height:420px;overflow:auto"></div>
         </div>
@@ -280,9 +281,10 @@ TPS7A4700-RGWT"></textarea>
   async function getDistinctVendorsPaginated(){
     const head = await supabase.from("excess_parts").select("*",{count:"exact",head:true}).not("vendor","is",null);
     const total=head.count||0; if(!total) return [];
-    const PAGE=10000, pages=Math.ceil(total/PAGE), uniq=new Set();
-    for(let p=0;p<pages;p++){
-      const {data}=await supabase.from("excess_parts").select("vendor").not("vendor","is",null).range(p*PAGE,Math.min(p*PAGE+PAGE-1,total-1));
+    const PAGE=10000, uniq=new Set();
+    for(let from=0; from<total; from+=PAGE){
+      const to = Math.min(from+PAGE-1,total-1);
+      const {data}=await supabase.from("excess_parts").select("vendor").not("vendor","is",null).range(from,to);
       (data||[]).forEach(r=>{const v=(r.vendor||"").trim(); if(v) uniq.add(v);});
     }
     return [...uniq].sort((a,b)=>a.localeCompare(b));
@@ -329,7 +331,7 @@ TPS7A4700-RGWT"></textarea>
       error:reject, complete:()=>resolve({headers:headers||[],totalRows:total})});
   });
 
-  // upload
+  // upload (unchanged core)
   function showOtherStaff(){ $("other-staff").style.display = $("uploaded-by").value==="Other"?"block":"none"; }
   $("uploaded-by").addEventListener("change", showOtherStaff);
 
@@ -421,7 +423,7 @@ TPS7A4700-RGWT"></textarea>
       $("up-stage").textContent="Done!";
       $("up-detail").textContent=`Inserted ${rows.length.toLocaleString()} rows.`; $("up-bar").style.width="100%";
       $("upload-status").innerHTML=`<span class="ok">Upload complete.</span>`;
-      await loadStats(); await refreshUploadsUI(); await loadExcessLog();
+      await loadStats(); await refreshUploadsUI(); await loadExcessLog(); await VendorView.reloadAll();
     }catch(e){
       console.error(e);
       $("upload-status").innerHTML=`<span class="err">Upload failed: ${e.message}</span>`;
@@ -502,6 +504,21 @@ TPS7A4700-RGWT"></textarea>
     if (error) throw new Error(error.message);
     return Number(data || 0);
   }
+  async function deleteVendorAll(vendor){
+    let removed = 0;
+    try{
+      const { data, error } = await supabase.rpc("excess_delete_by_vendor", { in_vendor: vendor });
+      if (error) throw error;
+      removed = Number(data || 0);
+    }catch(_){
+      // fallback direct delete
+      const { error, count } = await supabase.from("excess_parts").delete().eq("vendor", vendor).select("*",{count:"exact"});
+      if (error) throw error;
+      removed = Number(count || 0);
+    }
+    try { await supabase.from("excess_log").update({ status:"deleted" }).eq("vendor", vendor).eq("status","success"); } catch(_){}
+    return removed;
+  }
 
   async function handleDeleteUpload(meta) {
     const v = meta.vendor || "(unknown)";
@@ -527,17 +544,16 @@ TPS7A4700-RGWT"></textarea>
     } catch (_) {}
 
     alert(`Deleted ${removed.toLocaleString()} rows for ${v} on ${d}.`);
-    await loadStats(); await refreshUploadsUI(); await loadExcessLog();
+    await loadStats(); await refreshUploadsUI(); await loadExcessLog(); await VendorView.reloadAll();
   }
 
-  // REMOVE TAB — REFRESH LIST (with fallback to excess_log)
+  // REMOVE TAB — list (with log fallback)
   async function refreshUploadsUI(){
     const list = $("upload-list");
     list.innerHTML = "";
     const sel = $("rm-batch");
     sel.innerHTML = "";
 
-    // 1) try summaries table/view
     let data = null;
     try {
       const r = await supabase
@@ -550,7 +566,6 @@ TPS7A4700-RGWT"></textarea>
       data = null;
     }
 
-    // 2) FALLBACK to excess_log if nothing there
     if (!data || data.length === 0) {
       try {
         const r = await supabase
@@ -604,7 +619,7 @@ TPS7A4700-RGWT"></textarea>
             ${payload.batch_id ? `<div class="hint mono">Batch: ${payload.batch_id}</div>` : ``}
           </div>
           <div>
-            <button class="btn danger" style="padding:8px 12px" data-del='${JSON.stringify(payload)}'>Delete</button>
+            <button class="btn danger small" data-del='${JSON.stringify(payload)}'>Delete</button>
           </div>
         </div>
       `;
@@ -654,19 +669,60 @@ TPS7A4700-RGWT"></textarea>
     }
   };
 
-  // vendors tab
-  const VendorView={selected:null,page:1,pageSize:200,totalRows:0,totalQty:0,currentPageRows:[],
-    async fetchVendors(prefix=""){ let q=supabase.from("excess_parts").select("vendor").not("vendor","is",null).limit(10000);
-      if(prefix&&prefix.length>=2) q=q.ilike("vendor",`${prefix}%`);
-      const {data}=await q; const uniq=[...new Set((data||[]).map(r=>(r.vendor||"").trim()).filter(Boolean))].sort((a,b)=>a.localeCompare(b)); return uniq; },
-    vendorItem(v){ const el=document.createElement("div"); el.className="row"; el.style.cursor="pointer"; el.textContent=v;
-      el.onclick=()=>this.selectVendor(v); return el; },
-    async renderVendorList(prefix=""){ const box=$("vendor-list"); box.innerHTML=`<div class="row">Loading vendors…</div>`;
-      try{ const vs=await this.fetchVendors(prefix); $("vendor-count").textContent=vs.length.toLocaleString(); box.innerHTML=""; vs.forEach(v=>box.appendChild(this.vendorItem(v))); }catch(e){ box.innerHTML=`<div class="row err">${e.message}</div>`; } },
+  // VENDORS TAB (ALL vendors + delete buttons)
+  const VendorView={
+    cache:[], selected:null, page:1, pageSize:200, totalRows:0, totalQty:0, currentPageRows:[],
+    async loadAllVendors(){
+      const vendors = await getDistinctVendorsPaginated();
+      this.cache = vendors;
+      return vendors;
+    },
+    async reloadAll(){
+      await this.loadAllVendors();
+      this.renderVendorList($("vendor-search").value.trim());
+    },
+    vendorItem(v){
+      const el=document.createElement("div");
+      el.className="row";
+      el.style.cursor="pointer";
+      el.innerHTML = `
+        <div style="display:flex;justify-content:space-between;align-items:center;gap:10px">
+          <span>${v}</span>
+          <button class="btn danger small" data-del="${v}">Delete</button>
+        </div>`;
+      // select vendor on row click
+      el.addEventListener("click",(e)=>{
+        if (e.target && e.target.matches("button[data-del]")) return; // handled below
+        this.selectVendor(v);
+      });
+      // delete vendor
+      el.querySelector("button[data-del]").addEventListener("click", async (e)=>{
+        e.stopPropagation();
+        if (!confirm(`Delete ALL parts for vendor:\n\n${v}\n\nThis cannot be undone. Continue?`)) return;
+        try{
+          const removed = await deleteVendorAll(v);
+          alert(`Deleted ${removed.toLocaleString()} rows for ${v}.`);
+          await loadStats();
+          await this.reloadAll();
+          if (this.selected===v){ this.selected=null; $("vendor-title").textContent="—"; $("vendor-stats").textContent="Select a vendor"; $("vendor-parts").innerHTML=""; }
+        }catch(err){
+          alert(`Delete failed: ${err.message}`);
+        }
+      });
+      return el;
+    },
+    renderVendorList(prefix=""){
+      const box=$("vendor-list");
+      const term = prefix.trim().toLowerCase();
+      const list = term ? this.cache.filter(v=>v.toLowerCase().includes(term)) : this.cache.slice();
+      $("vendor-count").textContent = list.length.toLocaleString();
+      box.innerHTML = list.length ? "" : `<div class="row">No vendors found.</div>`;
+      list.forEach(v=>box.appendChild(this.vendorItem(v)));
+    },
     async selectVendor(v){ this.selected=v; this.page=1; $("vendor-title").textContent=v; $("btn-export-all").disabled=false; await this.refreshVendorStats(); await this.loadPage(); },
     async refreshVendorStats(){ const { count }=await supabase.from("excess_parts").select("*",{count:"exact",head:true}).eq("vendor",this.selected);
       this.totalRows=count||0; let totalQty=0,PAGE=10000,pages=Math.ceil((this.totalRows||0)/PAGE);
-      for(let p=0;p<pages;p++){ const {data}=await supabase.from("excess_parts").select("quantity").eq("vendor",this.selected).range(p*PAGE,p*PAGE+PAGE-1); (data||[]).forEach(r=> totalQty+=(Number(r.quantity)||0)); }
+      for(let p=0;p<pages;p++){ const {data}=await supabase.from("excess_parts").select("quantity").eq("vendor",this.selected).range(p*PAGE,Math.min((p*PAGE)+PAGE-1,(this.totalRows||1)-1)); (data||[]).forEach(r=> totalQty+=(Number(r.quantity)||0)); }
       this.totalQty=totalQty; $("vendor-stats").innerHTML=`Rows: <b>${(this.totalRows||0).toLocaleString()}</b> • Total Qty: <b>${(this.totalQty||0).toLocaleString()}</b>`; },
     async loadPage(){ const from=(this.page-1)*this.pageSize,to=from+this.pageSize-1;
       const {data,error,count}=await supabase.from("excess_parts").select("part_number,quantity,created_at",{count:"exact"}).eq("vendor",this.selected).order("part_number",{ascending:true}).range(from,to);
@@ -696,7 +752,7 @@ TPS7A4700-RGWT"></textarea>
   $("btn-export-page").onclick=()=>VendorView.exportCurrentPage();
   $("btn-export-all").onclick=()=>VendorView.exportAll();
 
-  // log tab with delete
+  // log tab
   async function loadExcessLog(limit=20){
     const box=$("log-list");
     box.innerHTML=`<div class="row">Loading…</div>`;
@@ -723,7 +779,7 @@ TPS7A4700-RGWT"></textarea>
               ${err}
             </div>
             <div>
-              <button class="btn danger" style="padding:8px 12px" data-log='${JSON.stringify(r)}' ${r.status==="deleted"?"disabled":""}>Delete</button>
+              <button class="btn danger small" data-log='${JSON.stringify(r)}' ${r.status==="deleted"?"disabled":""}>Delete</button>
               <div class="hint" style="text-align:right">${d} (UTC: ${r.created_on_utc})</div>
             </div>
           </div>
@@ -740,7 +796,7 @@ TPS7A4700-RGWT"></textarea>
   }
   $("log-refresh").addEventListener("click",()=>loadExcessLog());
 
-  // leaderboard (simple: count rows in excess_uploads by uploaded_by)
+  // leaderboard
   async function loadLeaderboard(){
     const tb=$("leader-tbody"); tb.innerHTML="";
     try{
@@ -769,7 +825,7 @@ TPS7A4700-RGWT"></textarea>
   }
 
   // init
-  loadStats(); refreshUploadsUI(); VendorView.renderVendorList(""); loadLeaderboard();
+  loadStats(); refreshUploadsUI(); await VendorView.loadAllVendors(); VendorView.renderVendorList(""); loadLeaderboard();
 </script>
 </body>
 </html>
